# httpfs

./: .gitignore  LICENSE  Makefile  README  README.md  debug.h  net.c  net.h  phpfs.c  phpfs.h  phpfs.php
fuse_api/: getattr.c  read.c  readdir.c
src/: CMakeLists.txt  debug.h  fuse_functions.def  generator.c  generator.h  generators.c  generators.h  httpfs.c  httpfs.h  main.c  net.c  net.h  phpfs.c  phpfs.h  phpfs.php  statuses.def  template.php
src/fuse_api/: chmod.c  chown.c  create.c  fuse_api.h  getattr.c  link.c  mkdir.c  open.c  read.c  readdir.c  readlink.c  rename.c  rmdir.c  symlink.c  truncate.c  unlink.c  write.c
src/lib/: debug.c  debug.h  fuse_functions.def  generators.c  generators.def  generators.h  httpfs.c  httpfs.h  net.c  net.h  version.h
src/lib/fuse_api/: chmod.c  chown.c  create.c  getattr.c  link.c  mkdir.c  open.c  read.c  readdir.c  readlink.c  rename.c  rmdir.c  symlink.c  truncate.c  unlink.c  write.c
src/lib/templates/: template.php
src/templates/: template.php
test/: php.sh  test-local-php.sh  test-local.sh
